# zfdash

./: .gitignore  ARCHITECTURE.md  Dockerfile  Dockerfile.NO.UV  README.md  build.sh  build_conda.sh  changelog.txt  check_env.sh  compose.moresecure.yml  compose.yml  enviroment-versions-tested.txt  get-zfdash.sh  install.sh  pyproject.toml  requirements.txt  run_docker.sh  uninstall.sh  zfdash.spec
.github/workflows/: docker-publish.yml  release-crossplatform.yml  release.yml
docker/: entrypoint.sh
install_service/: install_web_service.sh  uninstall_web_service.sh
scripts/: connect_webui_to_daemon.py  generate_notes.py  generate_tarball.py  publish_release.py  release.py  release.sh  test_tcp_agent.py
src/: config_manager.py  constants.py  control_center_manager.py  control_center_routes.py  daemon_utils.py  debug_logging.py  discovery_responder.py  discovery_scanner.py  gui_runner.py  help_strings.py  ipc_client.py  ipc_helpers.py  ipc_security.py  ipc_server.py  ipc_tcp_auth.py  ipc_tcp_client.py  ipc_tcp_server.py  main.py  main_window.py  models.py  paths.py  platform_block_devices.py  tls_manager.py  update_checker.py  utils.py  version.py  web_ui.py  worker.py  zfs_daemon.py  zfs_manager.py  zfs_manager_core.py
src/data/: credentials.json  update_instructions.json
src/data/policies/: org.zfsgui.pkexec.daemon.launch.policy
src/parsers/: __init__.py  zpool.py
src/static/css/: style.css
src/static/css/modules/: base.css  layout.css  utilities.css  variables.css
src/static/css/modules/components/: buttons.css  dashboard.css  login.css  modals.css  navbar.css  pool-manager.css  sidebar.css  tables.css
src/static/js/: app.js  deprecated_app.js  login.js
src/static/js/modules/: api.js  app.js  auth.js  constants.js  control-center-api.js  control-center.js  dashboard.js  dataset-actions.js  details.js  dom-elements.js  encryption.js  help.js  notifications.js  pool-actions.js  pool-edit-actions.js  pool-status.js  property-editor.js  snapshots.js  state.js  tree.js  ui.js  utils.js
src/static/js/modules/components/: vdev-manager.js
src/templates/: control_center.html  index.html  login.html
src/widgets/: create_dataset_dialog.py  create_pool_dialog.py  dashboard_widget.py  encryption_widget.py  import_pool_dialog.py  log_viewer_dialog.py  pool_editor_widget.py  pool_status_widget.py  properties_editor.py  snapshots_widget.py  vdev_config_widget.py  zfs_tree_model.py
